# test

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  src.qrc
.github/workflows/: main.yml
